--- a/templates/agendar_cita.html
+++ b/templates/agendar_cita.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %} {% include 'nav-scroller.html' %}
+{% block title %}Hora_cita{% endblock %}
+
+{% block body %}
 <!doctype html>
 <html lang="en">
 
@@ -7,16 +11,9 @@
   <meta name="description" content="">
   <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
   <meta name="generator" content="Hugo 0.104.2">
-  <title>Checkout example · Bootstrap v5.2</title>
+  <title>Offcanvas navbar template · Bootstrap v5.2</title>
 
-  <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/checkout/">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
-
-
-
-
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/offcanvas-navbar/">
   <link href="/docs/5.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
@@ -63,113 +60,115 @@
       vertical-align: -.125em;
       fill: currentColor;
     }
-
-    .nav-scroller {
-      position: relative;
-      z-index: 2;
-      height: 2.75rem;
-      overflow-y: hidden;
-    }
-
-    .nav-scroller .nav {
-      display: flex;
-      flex-wrap: nowrap;
-      padding-bottom: 1rem;
-      margin-top: -1px;
-      overflow-x: auto;
-      text-align: center;
-      white-space: nowrap;
-      -webkit-overflow-scrolling: touch;
-    }
   </style>
 
 
   <!-- Custom styles for this template -->
-  <link href="form-validation.css" rel="stylesheet">
+  <link href="/static/css/fecha_cita.css" rel="stylesheet">
 </head>
 
 <body class="bg-light">
 
-  <div class="container">
-    <main>
-      <div class="py-5 text-center">
-        <img class="d-block mx-auto mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-        <h2>Agendar cita</h2>
-        <p class="lead">Llene el siguiente formulario para agendar cita</p>
+  <main class="container">
+    <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm">
+      <img class="me-3" src="/static/images/informacion_cita_agendar_cita.png" alt="" width="48" height="48">
+      <div class="lh-1">
+        <h1 class="h6 mb-0 text-white lh-1">Información de la cita:</h1>
+        <small>(Revisa tus datos para asegurarte que todo esté en orden)</small>
       </div>
+    </div>
 
-      <div class="row g-5">
+    <div class="my-3 p-3 bg-body rounded shadow-sm">
+      <main>
 
-        <div class="col-md-7 col-lg-8">
-          <h4 class="mb-3">Información de cita</h4>
-          <form class="needs-validation" novalidate>
-            <div class="row g-3">
-              <div class="col-sm-6">
-                <label for="firstName" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-                <div class="invalid-feedback">
-                  Valid first name is required.
-                </div>
-              </div>
 
-              <div class="col-sm-6">
-                <label for="lastName" class="form-label">Apellido</label>
-                <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-                <div class="invalid-feedback">
-                  Valid last name is required.
-                </div>
-              </div>
+        <div class="row g-5 center">
+          <div class="col-md-7 col-lg-8">
 
-              <div class="col-12">
-                <label for="email" class="form-label">Email</label>
-                <div class="input-group has-validation">
-                  <span class="input-group-text">@</span>
-                  <input type="email" class="form-control" id="email" placeholder="email" required>
+            <form class="needs-validation" novalidate>
+              <div class="row g-3">
+                <div class="col-sm-6">
+                  <label for="firstName" class="form-label">Nombre</label>
+                  <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
                   <div class="invalid-feedback">
-                    Your email is required.
+                    Valid first name is required.
+                  </div>
+                </div>
+
+                <div class="col-sm-6">
+                  <label for="lastName" class="form-label">Apellido</label>
+                  <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+                  <div class="invalid-feedback">
+                    Valid last name is required.
+                  </div>
+                </div>
+
+                <div class="col-12">
+                  <label for="email" class="form-label">Email</label>
+                  <div class="input-group has-validation">
+                    <span class="input-group-text">@</span>
+                    <input type="email" class="form-control" id="email" placeholder="email" required>
+                    <div class="invalid-feedback">
+                      Your email is required.
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-md-5">
+                  <label for="tipo_servicio" class="form-label">Tipo de servicio</label>
+                  <select class="form-select" id="tipo_servicio" required>
+                    <option value="">Seleccion...</option>
+                    <option>Corte de cabello</option>
+                    <option>Pedicura</option>
+                    <option>Manicura</option>
+                    <option>Maquillaje</option>
+                    <option>Faciales</option>
+                  </select>
+                  <div class="invalid-feedback">
+                    Please select a valid service.
+                  </div>
+                </div>
+
+                <div class="col-md-4">
+                  <label for="fecha" class="form-label">Fecha</label>
+                  <input type="text" class="form-control" id="fecha" placeholder="" required>
+                  <div class="invalid-feedback">
+                    Ingrese una fecha
+                  </div>
+                </div>
+
+                <div class="col-md-3">
+                  <label for="hora" class="form-label">Hora</label>
+                  <input type="text" class="form-control" id="hora" placeholder="" required>
+                  <div class="invalid-feedback">
+                    hora requerida.
                   </div>
                 </div>
               </div>
+            </form>
+          </div>
+        </div>
 
-              <div class="col-md-5">
-                <label for="tipo_servicio" class="form-label">Tipo de servicio</label>
-                <select class="form-select" id="tipo_servicio" required>
-                  <option value="">Seleccion...</option>
-                  <option>Corte de cabello</option>
-                  <option>Pedicura</option>
-                  <option>Manicura</option>
-                  <option>Maquillaje</option>
-                  <option>Faciales</option>
-                </select>
-                <div class="invalid-feedback">
-                  Please select a valid country.
-                </div>
-              </div>
+      </main>
 
-              <div class="col-md-4">
-                <label for="fecha" class="form-label">Fecha</label>
-                <input type="text" class="form-control" id="fecha" placeholder="" required>
-                <div class="invalid-feedback">
-                  Ingrese una fecha
-                </div>
-              </div>
 
-              <div class="col-md-3">
-                <label for="hora" class="form-label">Hora</label>
-                <input type="text" class="form-control" id="hora" placeholder="" required>
-                <div class="invalid-feedback">
-                  hora requerida.
-                </div>
-              </div>
-            </div>
 
-            <hr class="my-4">
+    </div>
+    <hr class="my-4">
+  </main>
 
-            <button class="w-100 btn btn-primary btn-lg" type="submit">Agendar cita</button>
-          </form>
+
+
+  <div class="container">
+    <main>
+      <div class="row g-5 center">
+        <div class="col-md-7 col-lg-8">
+          <!--<button class="w-100 btn btn-primary btn-lg" type="submit">Agendar cita</button>-->
+          <p align="right"><a class="btn btn-lg btn-primary" href="/inicio">Agendar cita</a></p>
+          
         </div>
       </div>
-      
+
     </main>
 
     <footer class="my-5 pt-5 text-muted text-center text-small">
@@ -188,6 +187,16 @@
     crossorigin="anonymous"></script>
 
   <script src="form-validation.js"></script>
+
+
+  <script src="/docs/5.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+
+  <script src="offcanvas.js"></script>
 </body>
 
+
+
 </html>
+{% endblock %}
