--- a/templates/consultar_citas.html
+++ b/templates/consultar_citas.html
@@ -22,12 +22,13 @@
 
     <div class="my-3 p-3 bg-body rounded shadow-sm">
       <h6 class="border-bottom pb-2 mb-0">Citas realizadas</h6>
+        {% for cita in lista_citas %}
       <div class="d-flex text-muted pt-3">
 
-        <img class="me-3" src="/static/images/lapiz-labial.png" alt="" width="48" height="48">
+        <img class="me-3" src="/static/images/{{ cita['nombre_servicio'] }}.png" alt="" width="48" height="48">
         <p class="pb-3 mb-0 small lh-sm border-bottom btn-style">
-          <strong class="d-block text-gray-dark">Cita de maquillaje</strong>
-          Cita agendada para el 29/10/2022
+          <strong class="d-block text-gray-dark">Cita de {{ cita['nombre_servicio'] }}</strong>
+          Cita agendada para el {{ cita['fecha'] }} a las {{ cita['hora'] }} horas.
 
           <div class="btn-group" role="group" aria-label="Basic outlined example">
             <a type="button" class="btn btn-outline-primary" href="/informacion_cita">Ver cita</a>
@@ -36,35 +37,9 @@
         </p>
 
       </div>
-      <div class="d-flex text-muted pt-3">
 
-        <img class="me-3" src="/static/images/peine.png" alt="" width="48" height="48">
-        <p class="pb-3 mb-0 small lh-sm border-bottom btn-style">
-          <strong class="d-block text-gray-dark">Cita de peinado</strong>
-          Cita registrada para el 13/01/2022
-        </p>
+        {% endfor %}
 
-        <div class="btn-group" role="group" aria-label="Basic outlined example">
-          <a type="button" class="btn btn-outline-primary" href="/informacion_cita">Ver cita</a>
-          <a type="button" class="btn btn-outline-primary" href="/fecha_cita">Cambiar cita</a>
-        </div>
-
-      </div>
-      <div class="d-flex text-muted pt-3">
-
-        <img class="me-3" src="/static/images/fregar.png" alt="" width="48" height="48">
-
-        <p class="pb-3 mb-0 small lh-sm border-bottom btn-style">
-          <strong class="d-block text-gray-dark">Cita de facial</strong>
-          Cita registrada para el 29/04/2021
-        </p>
-
-        <div class="btn-group" role="group" aria-label="Basic outlined example">
-          <a type="button" class="btn btn-outline-primary" href="/informacion_cita" >Ver cita</a>
-          <a type="button" class="btn btn-outline-primary" href="/fecha_cita">Cambiar cita</a>
-        </div>
-
-      </div>
       <small class="d-block text-end mt-3">
         <a href="/fecha_cita">Agendar cita nueva</a>
       </small>
