--- a/templates/consultar_citas.html
+++ b/templates/consultar_citas.html
@@ -31,7 +31,7 @@
           Cita agendada para el {{ cita['fecha'] }} a las {{ cita['hora'] }} horas.
 
           <div class="btn-group" role="group" aria-label="Basic outlined example">
-            <a type="button" class="btn btn-outline-primary" href="/informacion_cita">Ver cita</a>
+            <a type="button" class="btn btn-outline-primary" href="/informacion_cita/{{ cita['id_cita'] }}">Ver cita</a>
             <a type="button" class="btn btn-outline-primary" href="/fecha_cita">Cambiar cita</a>
           </div>
         </p>
