--- a/templates/informacion_cita.html
+++ b/templates/informacion_cita.html
@@ -7,7 +7,7 @@
 
 <head>
     <!-- Custom styles for this template -->
-    <link href="informacion_cita.css" rel="stylesheet">
+{#    <link href="informacion_cita.css" rel="stylesheet">#}
 </head>
 
 <body>
@@ -21,24 +21,28 @@
         <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px;">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
                 <svg class="bi pe-none me-2" width="40" height="32">
-                    <use xlink:href="#bootstrap" />
+                    <use xlink:href="#bootstrap"></use>
                 </svg>
                 <span class="fs-4">Sidebar</span>
             </a>
             <hr>
             <ul class="nav nav-pills flex-column mb-auto">
+
+                {% for cita in lista_citas %}
                 <li class="nav-item">
-                    <a href="#" class="nav-link active" aria-current="page">
+                    <a href="/informacion_cita/{{ cita['id_cita'] }}" class="nav-link {% if cita['id_cita']== dicc_cita['id_cita'] %}active{% else %} link-dark{% endif %}" aria-current="page">
                         <svg class="bi pe-none me-2" width="16" height="16">
-                            <use xlink:href="#home" />
+                            <use xlink:href="#home"></use>
                         </svg>
-                        Cita de maquillaje
+                        Cita de {{ cita['nombre_servicio'] }} - {{ cita['fecha'] }}
                     </a>
                 </li>
+                {% endfor %}
+            <!--
                 <li>
                     <a href="#" class="nav-link link-dark">
                         <svg class="bi pe-none me-2" width="16" height="16">
-                            <use xlink:href="#speedometer2" />
+                            <use xlink:href="#speedometer2"></use>
                         </svg>
                         Cita de peinado
                     </a>
@@ -46,11 +50,12 @@
                 <li>
                     <a href="#" class="nav-link link-dark">
                         <svg class="bi pe-none me-2" width="16" height="16">
-                            <use xlink:href="#table" />
+                            <use xlink:href="#table"></use>
                         </svg>
                         Cita de facial
                     </a>
                 </li>
+                -->
 
             </ul>
 
@@ -107,11 +112,11 @@
                         <label for="tipo_servicio" class="form-label">Tipo de servicio</label>
                         <select class="form-select" id="tipo_servicio" required>
                             <!--<option value="">Seleccion...</option>-->
-                            <option value="">Maquillaje</option>
-                            <option>Corte de cabello</option>
-                            <option>Pedicura</option>
-                            <option>Manicura</option>
-                            <option>Faciales</option>
+                            {% for servicio in lista_servicios %}
+                            <option value="{{ servicio['id_servicio'] }}" {% if servicio['nombre'] == dicc_cita['nombre_servicio'] %}selected{% endif %}>
+                                {{ servicio['nombre'] }}</option>
+
+                            {% endfor %}
                         </select>
                         <div class="invalid-feedback">
                             Please select a valid service.
@@ -120,15 +125,15 @@
 
                     <div class="col-md-4">
                         <label for="fecha" class="form-label">Fecha</label>
-                        <input type="text" class="form-control" id="fecha" placeholder="29/10/2022" required>
+                        <input type="text" class="form-control" id="fecha" placeholder="{{ dicc_cita['fecha'] }}" required>
                         <div class="invalid-feedback">
                             Ingrese una fecha
                         </div>
                     </div>
 
                     <div class="col-md-3">
-                        <label for="hora" class="form-label">Hora</label>
-                        <input type="text" class="form-control" id="hora" placeholder="5:00 PM" required>
+                        <label for="hora" class="form-label">Hora (24h)</label>
+                        <input type="text" class="form-control" id="hora" placeholder="{{ dicc_cita['hora'] }}" required>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
@@ -142,7 +147,7 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
 
-    <script src="sidebars.js"></script>
+{#    <script src="sidebars.js"></script>#}
 </body>
 
 </html>
