login, signup y docker-compose

--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -88,7 +88,7 @@
   <form class="form_login" action="" method="POST">
     <img class="mb-4" src="/static/images/cleopatra.png" alt="" width="72" height="72">
     <h1 class="font-awesome-4">TRUE BEAUTY</h1>
-    <h5 class="h3 mb-3 fw-normal">Por favor inicia sesión</h5>
+    <h5 class="h3 mb-3 fw-normal">Recuperar contraseña</h5>
         {% for message in get_flashed_messages() %}
         <div class="alert alert-secondary alert-dismissible fade show" role="alert">
             {{message}}
@@ -97,21 +97,16 @@
         {% endfor %}
     
     <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" name="email" placeholder="name@example.com">
-      <label for="floatingInput">Email</label>
+      <input type="email" class="form-control" id="floatingInput" name="correo" placeholder="name@example.com">
+      <label for="floatingInput">Coloque su correo electrónico</label>
     </div>
+  <!--
     <div class="form-floating">
       <input type="password" class="form-control" id="floatingPassword" name="password" placeholder="Password">
       <label for="floatingPassword">Contraseña</label>
-    </div>
-
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Recordar información
-      </label>
-    </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit" name="enviar" value="Enviar">Entrar</button>
-    <a href="/forgot_password" class="olvide_contrasenia">No recuerdo mi contraseña</a>
+    </div> -->
+    <br>
+    <button class="w-100 btn btn-lg btn-primary" type="submit" name="enviar" value="Enviar">Enviar</button>
     <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
   </form>
 </main>
